[project]
name = "asst"
version = "0.1.0"
description = "Automation Support Service Template"
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
keywords = ["python", "testing", "linux", "docker", "ssh", "devops", "qa", "automation", "microservice", "server", "backend", " service", "client-server"]
authors = [
    {name = "Nikolay Shishov", email = "nikolay.shishov@gmail.com"}
]
classifiers = [
    "Programming Language :: Python"
]

dependencies = [
    "eventlet == 0.33.2",
    "paramiko == 2.12.0",
    "python-socketio == 5.7.2"
]

[project.optional-dependencies]
dev = [
    "flake8 >= 5.0.4",
    "black >= 22.10.0",
    "isort >= 5.10.1"
]

[project.urls]
repository = "https://github.com/nickosh/asst"
